--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -33,7 +33,7 @@
 <body>
 	
     <header>
-        <marquee bgcolor="#f7f305"
+        <marquee bgcolor="#fffffc"
 <div class="toogle"></div>
         <div id="file-name">
             %s
